# myfrs.halloffame

./: .gitignore  README.md  readme.md
halloffame/: CMakeLists.txt  HallOfFame.pro  build.sh  halloffame.desktop  halloffame.service  widget.ui
halloffame.install/: .profile  install.sh  lightdm.conf  mycpp-1.0.0-Linux.deb
halloffame.test/: HallOfFameTest.pro  main.cpp
halloffame/debian/: conffiles  control  postinst  prerm
halloffame/include/: Common.pb.h  config.h  currentthread.h  faguang.h  guangxian.h  historythread.h  huizhanglishi.h  ji.h  kuang.h  main.h  main_service.h  mingrentang.h  parse_task.h  pianming.h  qiehuantouxiang.h  read_task.h  startthread.h  widget.h  xingxing.h  xunzhang.h  yuan.h  yuanguang.h  yue.h  zhengzaijinxing.h  zhou.h
halloffame/proto/: CMakeLists.txt  Common.pb.cc  Common.proto
halloffame/sql/: frsit.sql
halloffame/src/: config.cpp  currentthread.cpp  faguang.cpp  guangxian.cpp  historythread.cpp  huizhanglishi.cpp  ji.cpp  kuang.cpp  main.cpp  main_service.cpp  mingrentang.cpp  parse_task.cpp  pianming.cpp  qiehuantouxiang.cpp  read_task.cpp  startthread.cpp  widget.cpp  xingxing.cpp  xunzhang.cpp  yuan.cpp  yuanguang.cpp  yue.cpp  zhengzaijinxing.cpp  zhou.cpp
